--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -707,7 +707,7 @@
   <nav class="mobile-sub-header">
     <a href="/index" class="nav-link">Personal notes</a>
     <a href="/group-notes" class="nav-link">Group notes</a>
-    <a href="/group-notes" class="nav-link active">Calendar</a>
+    <a href="/scheduler-page" class="nav-link active">Calendar</a>
   </nav>
 
   <div id="overlay"></div>
